[metadata]
name = py-hello
version = 0.0.1
description = A simple python hello world
author = Aaron Sykes
author-email = aaron@aaronsykes.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    py_hello

[test]
test-suite = tests

[pep8]
ignore = E701
max-line-length = 88

[flake8]
max-line-length = 88
