[metadata]
name = queuety
version = 0.0.1
description = A simple python queue worker, just for fun
author = Aaron Sykes
author-email = aaron@aaronsykes.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages = queuety

[test]
test-suite = tests

[pep8]
ignore = E701,E251
max-line-length = 88

[flake8]
max-line-length = 88
